--- a/src/components/checkout-item/checkoutItem.styles.scss
+++ b/src/components/checkout-item/checkoutItem.styles.scss
@@ -30,6 +30,12 @@
     .arrow {
       cursor: pointer;
       line-height: 120%;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
     }
 
     .value {
